--- a/index.html
+++ b/index.html
@@ -3,103 +3,145 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Docs</title> <!-- Fake title for unblocking -->
+  <title>Google Drive</title> <!-- The ultimate unblocked title -->
   <style>
     /* ============= GLOBAL & THEME ============= */
-    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-    body { background: #0f172a; color: #f8fafc; overflow-x: hidden; }
+    @import url('fonts.googleapis.com');
+
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Orbitron', sans-serif; }
+    body {
+      background: linear-gradient(135deg, #020617 0%, #0f172a 100%);
+      color: #f8fafc;
+      overflow-x: hidden;
+      min-height: 100vh;
+    }
+    a { color: inherit; text-decoration: none; }
+
+    /* Keyframe Animations */
+    @keyframes glow {
+      0%, 100% { text-shadow: 0 0 5px #06b6d4, 0 0 10px #06b6d4; }
+      50% { text-shadow: 0 0 10px #06b6d4, 0 0 20px #06b6d4; }
+    }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.02); }
+    }
 
     /* ============= PASSWORD PROTECTION (HONEY) ============= */
     #lock-screen {
       position: fixed; inset: 0; background: #020617; z-index: 9999;
       display: flex; flex-direction: column; align-items: center; justify-content: center;
+      text-align: center;
     }
+    #lock-screen h2 { color: #06b6d4; margin-bottom: 20px; animation: glow 2s infinite alternate; }
     #lock-screen input {
-      padding: 12px; border-radius: 8px; border: 1px solid #334155;
+      padding: 12px; border-radius: 8px; border: 2px solid #06b6d4;
       background: #1e293b; color: white; text-align: center; font-size: 18px; outline: none;
+      box-shadow: 0 0 15px rgba(6, 182, 212, 0.4);
     }
     #lock-screen button {
-      margin-top: 15px; padding: 10px 25px; border-radius: 8px; border: none;
-      background: #38bdf8; color: #020617; font-weight: bold; cursor: pointer;
+      margin-top: 25px; padding: 12px 30px; border-radius: 999px; border: none;
+      background: #facc15; color: #020617; font-weight: bold; cursor: pointer;
+      box-shadow: 0 0 15px rgba(250, 204, 21, 0.6); transition: 0.3s;
     }
+    #lock-screen button:hover { background: #fcd34d; transform: translateY(-2px); }
 
     /* ============= MAIN LAYOUT ============= */
-    #main-content { display: none; padding: 20px; }
+    #main-content { display: none; padding: 20px; max-width: 1200px; margin: auto; }
     header { display: flex; justify-content: space-between; align-items: center; padding-bottom: 20px; border-bottom: 1px solid #1e293b; }
-    .logo { font-size: 24px; font-weight: bold; color: #38bdf8; }
+    .logo { font-size: 28px; font-weight: bold; color: #06b6d4; animation: glow 1.5s infinite alternate; }
     
-    /* ============= GAME GRID ============= */
+    /* ============= GAME HUB GRID ============= */
     .game-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 20px; margin-top: 30px;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 25px; margin-top: 30px;
     }
     .game-card {
-      background: #1e293b; border-radius: 12px; padding: 15px;
+      background: #1e293b; border-radius: 12px; padding: 20px;
       text-align: center; transition: 0.3s; cursor: pointer; border: 1px solid #334155;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
     }
-    .game-card:hover { transform: translateY(-5px); border-color: #38bdf8; box-shadow: 0 0 15px rgba(56, 189, 248, 0.2); }
-    .game-icon { font-size: 40px; margin-bottom: 10px; }
+    .game-card:hover { transform: translateY(-5px) scale(1.03); border-color: #06b6d4; box-shadow: 0 0 20px rgba(6, 182, 212, 0.4); }
+    .game-icon { font-size: 50px; margin-bottom: 15px; }
 
-    /* ============= BOB AI ASSISTANT ============= */
+    /* ============= BOB AI ASSISTANT (Cool Version) ============= */
     #bob-assistant {
-      position: fixed; bottom: 20px; right: 20px; width: 250px;
-      background: #1e293b; border: 2px solid #38bdf8; border-radius: 15px;
-      padding: 15px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); z-index: 100;
+      position: fixed; bottom: 20px; right: 20px; width: 280px;
+      background: #1e293b; border: 2px solid #facc15; border-radius: 15px 15px 0 15px;
+      padding: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.6); z-index: 100;
+      animation: pulse 4s infinite;
     }
     #bob-avatar {
-      width: 50px; height: 50px; background: radial-gradient(circle, #f97316, #b91c1c);
-      border-radius: 50%; margin: -40px auto 10px auto; border: 3px solid #38bdf8;
+      width: 60px; height: 60px; background: linear-gradient(45deg, #f97316, #b91c1c);
+      border-radius: 50%; margin: -50px auto 10px auto; border: 4px solid #facc15;
     }
-    #bob-text { font-size: 13px; line-height: 1.4; color: #e2e8f0; }
-    .bob-name { font-weight: bold; color: #38bdf8; display: block; margin-bottom: 5px; }
+    #bob-text { font-size: 14px; line-height: 1.4; color: #e2e8f0; }
+    .bob-name { font-weight: bold; color: #facc15; display: block; margin-bottom: 8px; }
 
-    /* ============= UTILS ============= */
-    .hidden { display: none; }
+    /* ============= GAME CONTAINER FOR EMBEDDED GAME ============= */
+    #game-embed-container {
+      display: none;
+      position: fixed; inset: 0; background: #000; z-index: 9998;
+    }
+    #game-close-btn {
+        position: fixed; top: 10px; right: 10px; z-index: 10000;
+        background: #ef4444; color: white; padding: 8px 16px; border-radius: 5px;
+        cursor: pointer; display: none; /* Only show when game is open */
+    }
+
   </style>
 </head>
 <body>
 
   <!-- Lock Screen -->
   <div id="lock-screen">
-    <h2 style="margin-bottom: 20px;">Enter Access Key</h2>
-    <input type="password" id="pass-input" placeholder="Password...">
-    <button onclick="checkPass()">Unlock Games</button>
+    <h2>[ ACCESS PROTOCOL: HONEY ]</h2>
+    <input type="password" id="pass-input" placeholder="Initiate Sequence...">
+    <button onclick="checkPass()">ENTER</button>
   </div>
 
   <!-- Main Game Site -->
   <div id="main-content">
     <header>
-      <div class="logo">CoolGames.unblocked</div>
-      <div style="font-size: 12px; color: #64748b;">Press [ESC] to Panic-Hide</div>
+      <div class="logo">&lt;CYBER_HUB /&gt;</div>
+      <div style="font-size: 12px; color: #64748b;">[ESC] Panic Protocol</div>
     </header>
 
     <div class="game-grid">
-      <div class="game-card" onclick="alert('Launch Game Logic Here')">
-        <div class="game-icon">🚀</div>
-        <h3>Space Invaders</h3>
+      <div class="game-card" onclick="launchGame()">
+        <div class="game-icon">⚔️</div>
+        <h3>Gladihoppers</h3>
+        <p style="font-size: 10px; margin-top: 5px; color: #06b6d4;">(Poki Engine)</p>
       </div>
-      <div class="game-card" onclick="alert('Launch Game Logic Here')">
-        <div class="game-icon">🐍</div>
-        <h3>Retro Snake</h3>
+      <div class="game-card" onclick="alert('Game 2 Launch Logic Here')">
+        <div class="game-icon">🌌</div>
+        <h3>Star Explorer</h3>
       </div>
-      <div class="game-card" onclick="alert('Launch Game Logic Here')">
-        <div class="game-icon">🧱</div>
-        <h3>Tetris Clone</h3>
+      <div class="game-card" onclick="alert('Game 3 Launch Logic Here')">
+        <div class="game-icon">🧩</div>
+        <h3>Logic Puzzle</h3>
       </div>
-      <div class="game-card" onclick="alert('Launch Game Logic Here')">
-        <div class="game-icon">🏎️</div>
-        <h3>Speed Racer</h3>
+      <div class="game-card" onclick="alert('Game 4 Launch Logic Here')">
+        <div class="game-icon">👻</div>
+        <h3>Ghost Hunter</h3>
       </div>
     </div>
 
     <!-- BOB AI ASSISTANT -->
     <div id="bob-assistant">
       <div id="bob-avatar"></div>
-      <span class="bob-name">Bob (AI Assistant)</span>
-      <div id="bob-text">Hey there! I'm Bob. Need a break from class? I've kept the site unblocked for you. Press ESC if the teacher comes!</div>
+      <span class="bob-name">AI_Bob_v3.0</span>
+      <div id="bob-text">System operational. Gladihoppers is ready for deployment. Stay undetected!</div>
     </div>
   </div>
+
+  <!-- Game Embed Container -->
+  <button id="game-close-btn" onclick="closeGame()">Close Game [ESC]</button>
+  <div id="game-embed-container">
+    <!-- The game script will inject the canvas here -->
+  </div>
+
 
   <script>
     // Password Logic
@@ -108,17 +150,58 @@
       if (pass.toLowerCase() === 'honey') {
         document.getElementById('lock-screen').style.display = 'none';
         document.getElementById('main-content').style.display = 'block';
-        bobSpeak("Welcome back! Which game are we crushing today?");
+        bobSpeak("Access Granted. Welcome to Cyber Hub.");
       } else {
-        alert("Incorrect Password");
+        alert("Access Denied. Invalid Key.");
       }
     }
 
     // Bob AI Logic
     function bobSpeak(msg) {
-      const textEl = document.getElementById('bob-text');
-      textEl.innerText = msg;
+      document.getElementById('bob-text').innerText = msg;
     }
+
+    // Game Launch Logic
+    function launchGame() {
+        document.getElementById('main-content').style.display = 'none';
+        document.getElementById('bob-assistant').style.display = 'none';
+        document.getElementById('game-embed-container').style.display = 'block';
+        document.getElementById('game-close-btn').style.display = 'block';
+
+        // Inject the Poki Loader script provided by the user in the prompt
+        const script = document.createElement('script');
+        script.src = 'patch/js/poki-master-loader.js'; // IMPORTANT: You need to host this file
+        document.body.appendChild(script);
+
+        // Define window.config as specified in the user's Gladihoppers code
+        window.config = {
+            loader: 'unity',
+            debug: false,
+            maxRatio: 16 / 9,
+            minRatio: 9 / 16,
+            title: 'Gladihoppers',
+            thumbnail: 'patch/png/null.png',
+            numScreenshots: 5,
+            unityVersion: '2019.3.13f1',
+            unityWebglBuildUrl: 'Build/Gladihoppers.json', // IMPORTANT: You need to host this file
+            fileSize: 23,
+            cachedDecompressedFileSizes: {
+                'Gladihoppers.data.unityweb': 17409938,
+                'Gladihoppers.wasm.code.unityweb': 6410659,
+                'Gladihoppers.wasm.framework.unityweb': 91463,
+            },
+        };
+    }
+
+    function closeGame() {
+        document.getElementById('main-content').style.display = 'block';
+        document.getElementById('bob-assistant').style.display = 'block';
+        document.getElementById('game-embed-container').style.display = 'none';
+        document.getElementById('game-close-btn').style.display = 'none';
+        // Reloading might be necessary for some Unity builds to properly stop/unload
+        // location.reload();
+    }
+
 
     // Random Bob Tips
     const tips = [
@@ -135,10 +218,10 @@
       }
     }, 15000);
 
-    // Panic Key (Esc) Redirects to Google Classroom or Google
+    // Panic Key (Esc) Redirects to Google Drive/Classroom
     window.addEventListener('keydown', (e) => {
       if (e.key === "Escape") {
-        window.location.href = "https://classroom.google.com";
+        window.location.href = "https://drive.google.com";
       }
     });
 
